# weaver

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  flake.nix  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/extensions/git/: git-config.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
buffers/: Cargo.toml  README.md  build.rs
buffers/src/: atomic_write.rs  cli.rs  lib.rs  main.rs  model.rs  observer.rs  publisher.rs  test_support.rs  version.rs
buffers/tests/: apply_edits_property.rs  component_discipline.rs  path_canonicalization.rs  version_timing.rs
core/: Cargo.toml  README.md  build.rs
core/src/: lib.rs  main.rs  provenance.rs
core/src/behavior/: dirty_tracking.rs  dispatcher.rs  mod.rs
core/src/bus/: client.rs  codec.rs  delivery.rs  event_subscriptions.rs  listener.rs  mod.rs
core/src/cli/: args.rs  config.rs  edit.rs  errors.rs  inspect.rs  mod.rs  output.rs  save.rs  simulate.rs  status.rs  tracing_setup.rs  version.rs
core/src/fact_space/: in_memory.rs  mod.rs
core/src/inspect/: handler.rs  mod.rs
core/src/trace/: entry.rs  mod.rs  store.rs
core/src/types/: buffer_entity.rs  edit.rs  entity_ref.rs  event.rs  fact.rs  ids.rs  message.rs  mod.rs
core/tests/behavior/: dirty_tracking_assert.rs  dirty_tracking_retract.rs  dirty_tracking_sequence.rs  error_recovery.rs
core/tests/cli/: status_human.rs  status_round_trip.rs  status_unavailable.rs  version_timing.rs
core/tests/common/: mod.rs
core/tests/inspect/: behavior_authored.rs  buffer_behavior_service_overwrite.rs  causal_walkback.rs  inspection_found.rs  inspection_not_found.rs  inspection_overwrite.rs  structured_always.rs
core/tests/property/: dirty_tracking_invariant.proptest-regressions  dirty_tracking_invariant.rs  factvalue_u64_roundtrip.rs  inspect_identity.rs  inspection_invariant.proptest-regressions  inspection_invariant.rs  provenance_wire.rs
docs/: 00-constitution.md  01-system-model.md  02-architecture.md  03-interaction-model.md  04-composition-model.md  05-protocols.md  06-workflows.md  07-open-questions.md  08-technologies.md  09-repository-layout.md  code-review.md  mvp-editor-projection.md  mvp-editor.md  mvp-ontology.md  mvp-review-hacker-triage.md  mvp-review-hacker.md  mvp.md
git-watcher/: Cargo.toml  README.md  build.rs
git-watcher/src/: cli.rs  lib.rs  main.rs  model.rs  observer.rs  publisher.rs  version.rs
git-watcher/tests/: mutex_invariant.rs  transition_causal.rs
scripts/: ci.sh  install-git-hooks.sh  measure_sc501.sh
scripts/hooks/: pre-commit
specs/001-hello-fact/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-hello-fact/checklists/: requirements.md
specs/001-hello-fact/contracts/: bus-messages.md  cli-surfaces.md
specs/002-git-watcher-actor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-git-watcher-actor/checklists/: requirements.md
specs/002-git-watcher-actor/contracts/: bus-messages.md  cli-surfaces.md
specs/003-buffer-service/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-buffer-service/checklists/: requirements.md
specs/003-buffer-service/contracts/: bus-messages.md  cli-surfaces.md
specs/004-buffer-edit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-buffer-edit/checklists/: requirements.md
specs/004-buffer-edit/contracts/: bus-messages.md  cli-surfaces.md
specs/005-buffer-save/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-buffer-save/checklists/: requirements.md
specs/005-buffer-save/contracts/: bus-messages.md  cli-surfaces.md
tests/: Cargo.toml
tests/e2e/: buffer_authority_conflict.rs  buffer_degraded_observable.rs  buffer_edit_atomic_batch.rs  buffer_edit_emitter_parity.proptest-regressions  buffer_edit_emitter_parity.rs  buffer_edit_inspect_why.rs  buffer_edit_sequential.rs  buffer_edit_single.rs  buffer_edit_stale_drop.rs  buffer_external_mutation.rs  buffer_inspect_attribution.rs  buffer_multi_buffer.rs  buffer_open_bootstrap.rs  buffer_save_atomic_invariant.rs  buffer_save_clean_noop.rs  buffer_save_dirty.rs  buffer_save_inode_refusal.rs  buffer_sigkill.rs  buffer_simulate_removed.rs  disconnect.rs  eventid_uuid_strict_parsing.rs  fact_assert_identity_guard.rs  git_watcher.rs  git_watcher_authority_conflict.rs  git_watcher_inspect.rs  git_watcher_sigkill.rs  hello_fact.rs  multi_producer_uuidv8.rs  subscribe_snapshot.rs
tui/: Cargo.toml  README.md
tui/src/: args.rs  client.rs  commands.rs  lib.rs  main.rs  render.rs
ui/: Cargo.toml
ui/src/: lib.rs
