[workspace]
resolver = "3"
members = ["core", "tests", "tui", "ui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Alexander Dorn <ad@not.one>"]
repository = "https://github.com/outergod/weaver"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime — single Tokio runtime per process per L2 P12.
tokio = { version = "1", features = [
  "rt-multi-thread",
  "net",
  "sync",
  "signal",
  "time",
  "macros",
  "io-util",
] }

# Serialization — CBOR on the bus + JSON in the outer shell per L2 P5.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
ciborium-io = "0.2"

# CLI + humane errors per L2 P6.
clap = { version = "4", features = ["derive", "env"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Observability per L2 P13.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Property-based testing per L2 P9.
proptest = "1"

# Build-time provenance per L2 P11.
vergen = { version = "8", features = ["build", "cargo", "git", "gitcl", "rustc"] }

# TOML parsing for the XDG config file per `contracts/cli-surfaces.md`.
toml = "0.8"

# TUI rendering — minimal; ratatui deferred per research §4.
crossterm = "0.28"
