[package]
name = "weaver_core"
description = "Weaver core: bus, fact space, behavior dispatcher, embedded behaviors, CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "weaver"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
ciborium-io.workspace = true
clap.workspace = true
miette.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
vergen.workspace = true

[dev-dependencies]
proptest.workspace = true

# Phase 3 (US1) integration tests. Cargo auto-discovers files directly
# under `tests/`, but subdirectories are not picked up unless declared
# explicitly. These entries keep the task-spec paths verbatim.
[[test]]
name = "behavior_dirty_tracking_assert"
path = "tests/behavior/dirty_tracking_assert.rs"

[[test]]
name = "behavior_dirty_tracking_retract"
path = "tests/behavior/dirty_tracking_retract.rs"

[[test]]
name = "behavior_dirty_tracking_sequence"
path = "tests/behavior/dirty_tracking_sequence.rs"

[[test]]
name = "behavior_error_recovery"
path = "tests/behavior/error_recovery.rs"

[[test]]
name = "property_dirty_tracking_invariant"
path = "tests/property/dirty_tracking_invariant.rs"
