[package]
name = "weaver_core"
description = "Weaver core: bus, fact space, behavior dispatcher, embedded behaviors, CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "weaver"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
ciborium-io.workspace = true
clap.workspace = true
miette.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
uuid.workspace = true

[build-dependencies]
vergen.workspace = true

[dev-dependencies]
proptest.workspace = true

# Cargo auto-discovers integration tests directly under `tests/` but
# not in subdirectories; each entry below pins an explicit path so the
# structure under `tests/behavior/`, `tests/inspect/`,
# `tests/property/`, and `tests/cli/` continues to be picked up.
[[test]]
name = "behavior_error_recovery"
path = "tests/behavior/error_recovery.rs"

# Inspection tests (slice 002 Phase 4 structure).
[[test]]
name = "inspect_inspection_found"
path = "tests/inspect/inspection_found.rs"

[[test]]
name = "inspect_inspection_not_found"
path = "tests/inspect/inspection_not_found.rs"

[[test]]
name = "inspect_inspection_overwrite"
path = "tests/inspect/inspection_overwrite.rs"

[[test]]
name = "inspect_buffer_behavior_service_overwrite"
path = "tests/inspect/buffer_behavior_service_overwrite.rs"

[[test]]
name = "inspect_structured_always"
path = "tests/inspect/structured_always.rs"

[[test]]
name = "inspect_causal_walkback"
path = "tests/inspect/causal_walkback.rs"

[[test]]
name = "property_inspection_invariant"
path = "tests/property/inspection_invariant.rs"

[[test]]
name = "property_inspect_identity"
path = "tests/property/inspect_identity.rs"

# Phase 5 (US3) status CLI tests — spawn `weaver` via CARGO_BIN_EXE.
[[test]]
name = "cli_status_round_trip"
path = "tests/cli/status_round_trip.rs"

[[test]]
name = "cli_status_unavailable"
path = "tests/cli/status_unavailable.rs"

[[test]]
name = "cli_status_human"
path = "tests/cli/status_human.rs"

# Phase 6 (polish) additional tests.
[[test]]
name = "property_provenance_wire"
path = "tests/property/provenance_wire.rs"

[[test]]
name = "cli_version_timing"
path = "tests/cli/version_timing.rs"
