[package]
name = "weaver-e2e"
description = "Weaver end-to-end tests — spawn the `weaver` binary and drive it over the bus."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

# Dev-dependencies only; a lib/bin is neither needed nor provided. Cargo
# accepts a package whose sole targets are `[[test]]` entries.

[dev-dependencies]
weaver_core = { path = "../core" }
weaver-buffers = { path = "../buffers" }
tokio.workspace = true
ciborium.workspace = true
serde_json.workspace = true
tempfile.workspace = true
uuid.workspace = true
libc = "0.2"

[[test]]
name = "hello_fact"
path = "e2e/hello_fact.rs"

[[test]]
name = "disconnect"
path = "e2e/disconnect.rs"

[[test]]
name = "subscribe_snapshot"
path = "e2e/subscribe_snapshot.rs"

[[test]]
name = "git_watcher"
path = "e2e/git_watcher.rs"

[[test]]
name = "git_watcher_sigkill"
path = "e2e/git_watcher_sigkill.rs"

[[test]]
name = "git_watcher_authority_conflict"
path = "e2e/git_watcher_authority_conflict.rs"

[[test]]
name = "fact_assert_identity_guard"
path = "e2e/fact_assert_identity_guard.rs"

[[test]]
name = "git_watcher_inspect"
path = "e2e/git_watcher_inspect.rs"

[[test]]
name = "buffer_open_bootstrap"
path = "e2e/buffer_open_bootstrap.rs"

[[test]]
name = "buffer_external_mutation"
path = "e2e/buffer_external_mutation.rs"

[[test]]
name = "buffer_sigkill"
path = "e2e/buffer_sigkill.rs"

[[test]]
name = "buffer_inspect_attribution"
path = "e2e/buffer_inspect_attribution.rs"

[[test]]
name = "buffer_simulate_removed"
path = "e2e/buffer_simulate_removed.rs"
