[package]
name = "weaver-ui"
description = "Weaver UI — Tauri-based desktop UI; deferred per Hello-fact slice 001 scope"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "weaver_ui"
path = "src/lib.rs"
